<resources>
    <string name="app_name">Friends App</string>
    <string name="facebook_app_id">425828452374267</string>
    <string name="fb_login_protocol_scheme">fb425828452374267</string>
    <string name="facebook_client_token">ad7a8fbaac8c938e536cca5dca49d204</string>
    <string name="message_connection_error">Ошибка подключения</string>
    <string name="message_unknown_error">Неизвестная ошибка. Попробуйте позже.</string>
    <string name="vk_retry">Retry</string>
    <string name="welcome_title">Добро пожаловать в приложение FriendsApp!</string>
    <string name="welcome_description">Пожалуйста, выполните вход в приложение или создайте новый аккаунт.</string>
    <string name="social_description">Или выполнить вход используя:</string>
    <string name="facebook_description">facebook</string>
    <string name="btn_sign_in">Выполнить вход</string>
    <string name="btn_create_account">Создать аккаунт</string>
    <string name="hint_e_mail">Введите E-mail</string>
    <string name="hint_pass">Введите пароль</string>
    <string name="title_my_events">Мои события</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_profile">Профиль</string>
    <string name="title_home">Главная</string>
    <string name="title_add_new_event">Новое событие</string>
    <string name="title_update_event">Редактирование события</string>
    <string name="avatar_img_description">Аватар</string>
    <string name="text_filter">Настройки фильтрации</string>
    <string name="text_search">Поиск названию события</string>
    <string name="vk_description">VK</string>
    <string name="google_icon_description">Google icon</string>
    <string name="insta_icon_description">Instagram icon</string>
    <string name="event_card_nickname">Имя пользователя</string>
    <string name="event_card_age">XX</string>
    <string name="event_card_text">, желает</string>
    <string name="event_card_date">ХХ-ХХ-ХХХХ</string>
    <string name="event_card_event_name">Название события</string>
    <string name="event_card_with">C</string>
    <string name="event_card_category">Категория</string>
    <string name="add_hint_event_name">Например: пойти в кафе</string>
    <string name="add_label_i_want">Я желаю:</string>
    <string name="icon_label_all">Любой</string>
    <string name="icon_label_company">Компания</string>
    <string name="icon_label_girl">Девушка</string>
    <string name="icon_label_men">Парень</string>
    <string name="add_label_with">С кем:</string>
    <string name="add_label_category">Категория события:</string>
    <string name="description_add_btn">Добавить</string>
    <string name="add_date_label">Дата:</string>
    <string name="add_label_hours">Время суток:</string>
    <string name="add_label_icon_morning">Утро</string>
    <string name="add_label_icon_day">День</string>
    <string name="add_label_icon_evening">Вечер</string>
    <string name="add_label_icon_night">Ночь</string>
    <string name="add_label_event_description">Описание:</string>
    <string name="add_hint_event_description">Расскажите о намечающемся мероприятии</string>
    <string name="error_count_symbols">Введите не менее 4-х символов</string>
    <string name="error_empty_field">Данное поле не может быть пустым</string>
    <string name="error_email">Неверно введен email</string>
    <string name="error_duplicate_email">Этот email уже зарегистрирован</string>
    <string name="error_login_or_pass">Неверно введен логин или пароль</string>
    <string name="error_two_pass">Извините, Ваши пароли не совпадают</string>
    <string name="error_check_pass">Пароль должен состоять из букв нижнего и верхнего регистра, цифр. И иметь не менее 5 символов.</string>
    <string name="error_check_name">Имя может состоять из букв нижнего и верхнего регистра.</string>
    <string name="error_check_city">Данный город не был найден в списке</string>
    <string name="error_radio">Выберете один из элементов</string>
    <string name="loading">Загрузка данных</string>
    <string name="add_btn_label_done">Добавить</string>
    <string name="update_btn_label_done">Сохранить изменения</string>
    <string name="want_text">Желает:</string>
    <string name="about_event_label">О мероприятии:</string>
    <string name="label_day_of_week">День недели:</string>
    <string name="label_with">C:</string>
    <string name="event_info_men">парнем</string>
    <string name="event_info_girl">девушкой</string>
    <string name="event_info_company">компанией</string>
    <string name="event_info_all">кем-нибудь</string>
    <string name="background_wave">background wave</string>
    <string name="hint_repeat_pass">Повторите пароль</string>
    <string name="description_logo">AppFriends logo</string>
    <string name="register_description">Данная информация необходима для подтверждения аккаунта</string>
    <string name="register_title">Регистрация</string>
    <string name="img_description_friends">Friends</string>
    <string name="reg_btn_text">Продолжить</string>
    <string name="reg_birthday_title">Когда у Вас день рождения?</string>
    <string name="reg_birthday_description">Пользовали AppFriends увидят в профиле только Ваш возраст</string>
    <string name="hint_reg_name">Введите Имя</string>
    <string name="reg_photo_text_description">Фото будет отображаться на Вашей аватарке. Вы можете изменить или добавить ещё фото в меню Профиль.</string>
    <string name="reg_photo_title">Чего-то не хватает… Точно! Вашего фото.</string>
    <string name="about_user_description">Вам будет задано несколько простых вопросов.Так пользователи FriendsApp будут знать то, что Вам нравится и какие мероприятия можно Вам предложить</string>
    <string name="tv_see_events">Смотреть на приложение со стороны</string>
    <string name="dialog_auth_sign_in">Войти</string>
    <string name="dialog_auth_cancel">Отмена</string>
    <string name="dialog_auth_description">Войдите с помощью своего аккаунта для использования данной функции</string>
    <string name="dialog_auth_title">Вы не авторизованы</string>
    <string name="dialog_del_title">Подтверждение</string>
    <string name="dialog_del_description">Вы действительно хотите удалить? Данное действие нельзя будет отменить.</string>
    <string name="dialog_del_btn_delete">Удалить</string>
    <string name="register_btn_completed">Готово</string>
    <string name="register_city_hint">Укажите свой город</string>
    <string name="register_title_city">Почти готово! Ещё один вопрос. Откуда Вы?</string>
    <string name="register_text_city">Укажте свое местоположение - это позволит найти созданные события из Вашего города</string>
    <string name="register_avatar_img_description">Ваш аватар</string>
    <string name="img_description_settings">Настройки приложения</string>
    <string name="img_description_see_profile">Как видят Вас другие пользователи</string>
    <string name="img_description_user_photos">Ваши фото</string>
    <string name="img_description_exit">Выйти из аккаунта</string>
    <string name="profile_text_exit">Выйти из аккаунта</string>
    <string name="img_description_delete_profile">Удалить аккаунт</string>
    <string name="profile_text_delete_profile">Удалить аккаунт</string>
    <string name="text_send_message">Ввод сообщения…</string>
    <string name="text_title_comment">Комментарии</string>
    <string name="options_edit">Редактировать</string>
    <string name="options_delete">Удалить</string>
    <string name="options_cancel">Отмена</string>
    <string name="mode_edit_comment">Режим редактирования</string>
    <string name="btn_text_participate">Подать заявку на участие</string>
    <string name="btn_text_participate_rejected">Создать аналог мероприятия</string>
    <string name="btn_text_participate_approved">Покинуть список участников</string>
    <string name="btn_text_participate_waiting">Отменить заявку на участие</string>
    <string name="btn_text_participate_organizer">Редактировать мероприятие</string>
    <string name="text_notification_title_organizer">Заявка на участие в мероприятии</string>
    <string name="text_notification_text_organizer">Пользователь Nickname подал заявку на мероприятие Event</string>
    <string name="text_hidden_btn_organizer_approve">Заявка была успешно подтверждена!</string>
    <string name="text_hidden_btn_organizer_reject">Заявка была отклонена.</string>
    <string name="text_notification_title_approved">Ваша заявка принята!</string>
    <string name="text_notification_title_rejected">Ваша заявка отклонена!</string>
    <string name="text_notification_text_approved">Вашу заявку на участие в мероприятии Event одобрили.</string>
    <string name="text_notification_text_rejected">К сожалению, Ваша заявка на участие в мероприятии Event была отклонена.</string>
    <string name="text_hidden_btn_participant">Это уведомление будет скрыто.</string>
    <string name="participant_event_fragment_base_text">Здесь будут отображаться события, в которых вы участвуете</string>
    <string name="fragment_notification_base_text">У Вас пока нет новых уведомлений. В этом разделе будут отображаться оповещения о встречах, приглашениях в беседы и т.д.</string>
    <string name="btn_text_reject">Отклонить</string>
    <string name="btn_text_approve">Принять</string>
    <string name="btn_text_hidden">Скрыть</string>
    <string name="title_participant">Участники: </string>
    <string name="info_about_me">Обо мне:</string>
    <string name="chips_title_main">Основное:</string>
    <string name="personal_information">Личная информация</string>
    <string name="alcohol">Алкоголь</string>
    <string name="smoking">Курение</string>
    <string name="about_me">Обо мне:</string>
    <string name="city">Город:</string>
    <string name="gender">Пол:</string>
    <string name="name">Имя</string>
    <string name="psychotype">Характер</string>
    <string name="btn_update_text">Сохранить изменения</string>
    <string name="question_alcohol">Употребляете ли Вы алкоголь?</string>
    <string name="question_smoking">Курите ли Вы?</string>
    <string name="question_psychotype">Какой Ваш тип личности?</string>
    <string name="for_company">за компанию</string>
    <string name="often">часто</string>
    <string name="never">никогда</string>
    <string name="rarely">редко</string>
    <string name="no_answer">нет ответа</string>
    <string name="no">нет</string>
    <string name="quit">бросаю</string>
    <string name="introvert">интроверт</string>
    <string name="extravert">экстраверт</string>
    <string name="mixed">50 на 50</string>
    <string name="close_btn_text">Закрыть</string>
    <string name="error_text_title">Ошибка запроса данных!</string>
    <string name="error_description_text">Проверьте доступность сети Интернет и выполните запрос позже.</string>
    <string name="menu_sort">Настройки сортировки</string>
    <string name="btn_text_apply">Применить</string>
    <string name="title_sort">Сортировать мероприятия по:</string>
    <string name="sort_radio_creation_date">дате создания (сначала новые)</string>
    <string name="sort_radio_event_date">дате проведения мероприятия</string>
    <string name="sort_radio_location">местоположению (ближайшие к Вам)</string>
    <string name="sort_radio_location_creation_date">местоположению и дате создания</string>
    <string name="sort_radio_location_event_date">местоположению и дате мероприятия</string>
    <string name="text_clear">Очистить</string>
    <string name="filter_title">Фильтры для мероприятий</string>
    <string name="filter_description">Используйте фильтры, чтобы видеть только те мероприятия, которые Вас интересуют.</string>
    <string name="filter_day_of_week">День недели</string>
    <string name="filter_period_of_time">Время суток</string>
    <string name="filter_category">Категория мероприятия</string>
    <string name="filter_partner">Партнер</string>
    <string name="filter_value_title_day_of_week">День недели</string>
</resources>